--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     #get-name { background: #eee; padding: 0.5em; }
   </style>
 </head>
+
 <body>
+  <h1 id="my-names">placeholder</h1>
   <p>Hello, <span id="my-name">anonymous user</span>!</p>
 
   <form id="get-name" action="#" method="post">
     <label for="user-name">Enter name:</label>
     <input type="text" id="user-name" placeholder="Your name?">
     <input type="submit">
+    <input type="reset">
   </form>
 
   <!--
@@ -26,6 +29,7 @@
 
     Can you work out what the problem is?
   -->
-  <script src="js/greeting.js"></script>
+   <script src="js/greeting.js"></script>
+  
 </body>
 </html>
